# Eidolon-Engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.agent/: .instructions.md  AI_SYSTEM.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  ECS_DESIGN.md  OBSERVABILITY.md  PHASE_0_SUMMARY.md  README.md  ROADMAP.md  SCENARIOS.md  SIMULATION.md
.github/workflows/: ci.yml
assets/: .placeholder
assets/config/: ai.ron  simulation.ron
assets/scenarios/: equilibrium.ron  index.ron  island.ron  overpopulation.ron  scarcity.ron  stress_test.ron
src/: lib.rs  main.rs
src/ai/: actions.rs  decision.rs  memory.rs  mod.rs  utility.rs
src/engine/: camera.rs  input.rs  mod.rs  render.rs  time.rs  window.rs
src/observability/: behavior_log.rs  hud.rs  inspector.rs  mod.rs  overlays.rs  replay.rs  theme.rs  timeline.rs
src/scenarios/: builder.rs  loader.rs  mod.rs  presets.rs
src/simulation/: agent.rs  events.rs  mod.rs  resource.rs  rules.rs  spatial.rs  world.rs
tests/: determinism.rs  foraging_regression.rs  movement_regression.rs  perception_regression.rs  population_regression.rs  scenario_store_spawning.rs
tests/determinism/: mod.rs
tests/simulation/: mod.rs
